derive/tests/snapshots/disallow_soft_delete_and_cascade/Guild/get_all_guilds.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `guild` table.
    pub fn get_all_guilds<'a>(&'a self) -> impl Iterator<Item = Guild> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().guild().iter()
    }
}
